# doggy_dance_project

./: .gitignore  README.md  docker-compose.yml  rest_api.Dockerfile  web_app.Dockerfile
angular-doggy-dance-project/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
angular-doggy-dance-project/src/: index.html
angular-doggy-dance-project/src/app/: app.component.html  app.component.ts  app.module.ts  coordinate.ts  joint.ts  link.ts  mock-robomodels.ts  robomodel.service.ts  robomodel.ts  robomodel_desc.ts  xyz.ts
angular-doggy-dance-project/src/environments/: environment.prod.ts
angular-robo-dance-project/: angular.json  package-lock.json  package.json
angular-robo-dance-project/src/: index.html  styles.css
angular-robo-dance-project/src/app/: app.component.html  app.component.spec.ts  app.module.ts  forward_kinematics_interfaces.ts  joint.ts  kinematics_interfaces.ts  link.ts  robomodel.service.spec.ts  robomodel.service.ts  robomodel.ts  robomodel_desc.ts  (+1 more)
hello-world/: angular.json  package-lock.json
oatpp-doggy-dance-project/: CMakeLists.txt  README.md
oatpp-doggy-dance-project/src/: App.cpp  AppComponent.hpp
oatpp-robo-dance-project/: CMakeLists.txt  README.md
oatpp-robo-dance-project/demo_assets/: inverse_kinematics.odg  quadruped_coordinate_system.odg
oatpp-robo-dance-project/src/controller/: MyController.cpp  MyController.hpp
oatpp-robo-dance-project/src/dto/: DTOs.hpp
oatpp-robo-dance-project/src/kinematics/: RoboKinematicModel.cpp  RoboKinematicModel.hpp
oatpp-robo-dance-project/tests/: test_kinematics.cpp
(+21 files in other folders)
